2008-04-15  Andreas Kupries  <andreask@activestate.com>

	*** 8.4.19 TAGGED FOR RELEASE ***

	* generic/tclIO.c (CopyData): Applied another patch by Alexandre
	* io.test (io-53.8a): Ferrieux <ferrieux@users.sourceforge.net>,
	to shift EOF handling to the async part of the command if a
	callback is specified, should the channel be at EOF already when
	fcopy is called. Testcase by myself.

2008-04-14  Kevin B. Kenny  <kennykb@acm.org>

	* unix/tclUnixTime.c (TclpGetClicks, Tcl_GetTime): Removed
	obsolete use of 'struct timezone' in the call to 'gettimeofday'.
	[Bug 1942197].
	
2008-04-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Plug memory leak introduced in the
	2008-03-07 commit.  [Bug 1940433]

2008-04-11  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.19
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

	* changes:		updates for 8.4.19 release.

2008-04-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Keeping check for negative
	values, changed to not be an error, but behave like the special
	value -1 (copy all, default).

	* tests/iocmd.test (iocmd-15.{12,13}): Removed.

	* tests/io.test (io-52.5{,a,b}): Reverted last change, added
	comment regarding the meaning of -1, added two more testcases for
	other negative values, and input wrapped to negative.

2008-04-09  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-52.5): Removed '-size -1' from test, does not
	seem to have any bearing, and was an illegal value. Test case is
	not affected by the value of -size, test flag restoration and that
	everything was properly copied.

	* generic/tclIOCmd.c (Tcl_FcopyObjCmd): Added checking of -size
	* tests/ioCmd.test (iocmd-15.{13,14}): value to reject negative
	values, and values overflowing 32-bit signed. [Bug 1557855]. Basic